Created navigation for mobile and desktop installed framer motion fetched single pages information

--- a/src/scss/_general.scss
+++ b/src/scss/_general.scss
@@ -1,3 +1,9 @@
 body{
   max-width: 2000px;
+  margin: 0;
+  background-color: #ebe2da;
+  font-family: 'Raleway';
+  .home-page{
+    background-color:#ebe2da;;
+  }
 }
