--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,23 +1,29 @@
 body {
+  line-height: 1.5;
   max-width: 2000px;
   margin: 0;
-  background-color: #ebe2da;
+  background-color: #EEEEEA;
   font-family: "Raleway";
 }
 body .home-page {
-  background-color: #ebe2da;
+  background-color: #EEEEEA;
+}
+body a {
+  text-decoration: none;
+  color: black;
 }
 
 header {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 header .logo {
   width: 4rem;
   height: 4rem;
 }
 header button {
-  border: 0.1rem solid #F28705;
+  border: 0.1rem solid #703030;
   border-radius: 0.6rem;
   padding: 0.1rem 0.4rem;
   background-color: transparent;
@@ -54,28 +60,47 @@ header .mobile-nav .social-links-wrapper .social-links {
   margin: 0 auto;
   text-align: center;
 }
-.landing-section h1 {
+.landing-section .name-wrapper {
+  margin-top: 5rem;
+}
+.landing-section .name-wrapper h1 {
   font-family: "Gowun Batang";
   font-weight: 200;
   font-size: 3rem;
   color: black;
   margin: 0;
 }
-.landing-section h2 {
+.landing-section .name-wrapper h2 {
   font-family: "Raleway";
   font-weight: 400;
-  font-size: 2rem;
+  font-size: 1.8rem;
 }
-.landing-section p {
+.landing-section .name-wrapper p {
   font-family: "Raleway";
   font-weight: 300;
   font-size: 1.5rem;
   font-style: italic;
 }
+.landing-section svg {
+  margin-top: 4rem;
+}
 
+@media (min-width: 56em) {
+  .landing-section .name-wrapper h1 {
+    font-size: 4.5rem;
+  }
+  .landing-section .name-wrapper h2 {
+    font-size: 2rem;
+  }
+}
+.home-work-section .work-short-overview {
+  border-left: 0.15rem solid #703030;
+  padding-left: 0.5rem;
+}
 .home-work-section img {
   object-fit: cover;
-  max-width: 17rem;
+  width: 100%;
+  height: 100%;
   position: relative;
   margin: 0 auto;
   filter: grayscale(70%) opacity(100%) saturate(120%) sepia(0%);
@@ -84,29 +109,281 @@ header .mobile-nav .social-links-wrapper .social-links {
 .home-work-section img:hover {
   filter: none;
 }
-.home-work-section .home-page-single-work .learn-more-button {
+.home-work-section h2 {
+  font-weight: 600;
+  font-size: 1.5rem;
+}
+.home-work-section .home-page-single-work h3 {
+  font-weight: 500;
+  font-size: 1.3rem;
+  margin-bottom: 0.5rem;
+}
+.home-work-section .home-page-single-work .top-skills {
   display: flex;
+  font-size: 1rem;
+  gap: 0.5rem;
+}
+.home-work-section .home-page-single-work .top-skills p:last-child {
+  border: none;
+}
+.home-work-section .home-page-single-work .top-skills p {
+  margin: 0;
+  position: relative;
+  padding-right: 0.5rem;
+  border-right: 0.1rem solid black;
+}
+.home-work-section .home-page-single-work .learn-more-button {
+  max-width: 13rem;
+  border: 0.15rem solid #703030;
+  border-radius: 3rem;
+  padding: 0.3rem 0.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  margin-bottom: 2rem;
+}
+.home-work-section .home-page-single-work .learn-more-button p {
+  margin: 0;
 }
 .home-work-section .home-page-single-work .learn-more-button svg {
   width: 2rem;
 }
 
-.about-me-section .skill-tab-panel {
+@media (min-width: 56em) {
+  .home-work-section {
+    margin: 0 2rem;
+  }
+  .home-work-section .work-short-overview {
+    font-size: 1.2rem;
+  }
+  .home-work-section h2 {
+    font-size: 2.8rem;
+  }
+  .home-work-section article {
+    margin-bottom: 15rem;
+    display: grid;
+    grid-template-columns: 3fr 2fr;
+    grid-template-rows: auto;
+    column-gap: 4rem;
+  }
+  .home-work-section article .image-container {
+    grid-column: 1/2;
+    grid-row: 1/2;
+  }
+  .home-work-section article .home-page-single-work {
+    grid-column: 2/3;
+  }
+  .home-work-section article .home-page-single-work h3 {
+    font-size: 1.8rem;
+  }
+  .home-work-section article .home-page-single-work .top-skills {
+    font-size: 1.3rem;
+    gap: 1rem;
+  }
+  .home-work-section article .home-page-single-work .top-skills p {
+    padding-right: 1rem;
+  }
+  .home-work-section article:nth-child(2), .home-work-section article:nth-child(4) {
+    grid-template-columns: 2fr 3fr;
+  }
+  .home-work-section article:nth-child(2) .home-page-single-work, .home-work-section article:nth-child(4) .home-page-single-work {
+    grid-column: 1/2;
+  }
+  .home-work-section article:nth-child(2) .image-container, .home-work-section article:nth-child(4) .image-container {
+    grid-column: 2/3;
+  }
+}
+.about-me-section .about-me-text p {
+  max-width: 40rem;
+}
+.about-me-section .about-me-text .react-tabs ul {
+  border: none;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 1rem;
+}
+.about-me-section .about-me-text .react-tabs ul li {
+  background-color: inherit;
+  border: none;
+  border-bottom: 2px solid black;
+  font-weight: 600;
+  padding: 0.8rem 1rem;
+}
+.about-me-section .about-me-text .react-tabs ul li:focus {
+  border-color: #ff8400;
+}
+.about-me-section .about-me-text .react-tabs ul li:focus::after {
+  background: none;
+}
+.about-me-section .about-me-text .react-tabs ul .react-tabs__tab--selected {
+  border-color: rgb(255, 132, 0);
+  background: none;
+}
+.about-me-section .about-me-text .skill-tab-panel {
   width: 100%;
   max-width: 100vw;
 }
-.about-me-section .skill-tab-panel .single-skill {
+.about-me-section .about-me-text .skill-tab-panel .single-skill {
   display: flex;
   align-items: center;
   gap: 1rem;
 }
-.about-me-section .skill-tab-panel .single-skill img {
+.about-me-section .about-me-text .skill-tab-panel .single-skill img {
   width: 4rem;
   height: 4rem;
 }
 
+@media (min-width: 56em) {
+  .about-me-section .about-me-text p {
+    max-width: 60rem;
+  }
+}
 .home-page {
   margin: 0 1rem;
+}
+
+.detailed-section h3 {
+  text-align: center;
+  margin-bottom: 0;
+  font-weight: 600;
+}
+.detailed-section .overview {
+  margin-bottom: 6rem;
+}
+.detailed-section .overview h2 {
+  text-align: center;
+}
+.detailed-section .work-tools {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 2rem;
+  row-gap: 0;
+  margin-bottom: 2rem;
+}
+.detailed-section .work-tools p {
+  border: 1px solid #ff8400;
+  border-radius: 2rem;
+  padding: 0.4rem 0.6rem;
+}
+.detailed-section .work-info .react-tabs ul {
+  border: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 3rem;
+}
+.detailed-section .work-info .react-tabs ul li {
+  background-color: inherit;
+  border: none;
+  border-bottom: 2px solid black;
+  font-weight: 600;
+  padding: 0.8rem 2rem;
+}
+.detailed-section .work-info .react-tabs ul li:focus {
+  border-color: #ff8400;
+}
+.detailed-section .work-info .react-tabs ul li:focus::after {
+  background: none;
+}
+.detailed-section .work-info .react-tabs ul .react-tabs__tab--selected {
+  border-color: rgb(255, 132, 0);
+  background: none;
+}
+.detailed-section .work-info .tab-panel-wrapper {
+  max-width: 35rem;
+  margin: 0 auto;
+}
+.detailed-section .work-info .tab-panel-wrapper h4 {
+  margin-bottom: 0.5rem;
+}
+.detailed-section .work-info .tab-panel-wrapper p {
+  margin-top: 0;
+  margin-bottom: 1.7rem;
+}
+
+@media (min-width: 56em) {
+  .detailed-section {
+    margin-top: 12rem;
+  }
+  .detailed-section h3 {
+    font-size: 1.5rem;
+  }
+  .detailed-section p {
+    font-size: 1.2rem;
+  }
+  .detailed-section .overview {
+    margin: 0 auto 8rem;
+    max-width: 55rem;
+  }
+  .detailed-section .work-tools p {
+    padding: 0.5rem 1.5rem;
+  }
+  .detailed-section .work-info .react-tabs ul li {
+    font-size: 1.2rem;
+  }
+  .detailed-section .work-info .tab-panel-wrapper {
+    max-width: 55rem;
+  }
+}
+.single-work-main {
+  margin: 0 1rem;
+}
+.single-work-main .single-page-landing {
+  margin: 5rem 0 10rem;
+  max-height: 100vh;
+}
+.single-work-main .single-page-landing h1 {
+  text-align: center;
+  font-size: 2rem;
+  font-weight: 500;
+}
+.single-work-main .single-page-landing .featured-image {
+  display: block;
+  margin: 0 auto 1rem;
+  max-width: 50rem;
+  object-fit: cover;
+  height: 100%;
+  width: 100%;
+}
+.single-work-main .single-page-landing .single-page-buttons {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 2rem;
+}
+.single-work-main .single-page-landing .single-page-buttons a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.3rem;
+  width: 8rem;
+  padding: 0.3rem 0.6rem;
+  border: 0.1rem solid #ff8400;
+  border-radius: 1.5rem;
+}
+.single-work-main .single-page-landing .single-page-buttons a p {
+  font-weight: 500;
+  margin: 0;
+}
+.single-work-main .single-page-landing .single-page-buttons a svg {
+  width: 1.5rem;
+  height: 1.5rem;
+}
+.single-work-main .work-gallery img, .single-work-main .work-gallery video {
+  object-fit: cover;
+  height: 100%;
+  width: 100%;
+  max-width: 20rem;
+}
+
+@media (min-width: 56em) {
+  .single-work-main .single-page-landing {
+    margin: 3rem 0 5rem;
+  }
 }
 
 /*# sourceMappingURL=styles.css.map */
