--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -2,11 +2,16 @@ header{
   display: flex;
   justify-content: space-between;
   align-items: center;
+  position: relative;
   .logo{
     width: 4rem;
     height: 4rem;
   }
   button{
+    position: absolute;
+    top: 1rem;
+    right: 0;
+    z-index: 10;
     border: 0.1rem solid  #703030;
     border-radius: 0.6rem;
     padding: 0.1rem 0.4rem;
@@ -18,6 +23,9 @@ header{
 
   //general navigation style
   .general-nav{
+    position: absolute;
+    top: 0;
+    right: 0;
     ul{
       list-style: none;
       padding-left: 0;
