Fixed the navigation, added the footer

--- a/src/scss/_home-work-section.scss
+++ b/src/scss/_home-work-section.scss
@@ -1,6 +1,6 @@
 .home-work-section{
   .work-short-overview{
-    border-left: 0.15rem solid #703030;
+    border-left: 0.15rem solid #f08a4b;
     padding-left: 0.5rem;
   }
 
@@ -47,7 +47,7 @@
 
     .learn-more-button{
       max-width: 13rem;
-      border: 0.15rem solid #703030;
+      border: 0.15rem solid #f08a4b;
       border-radius: 3rem;
       padding: 0.3rem 0.5rem;
       display: flex;
