--- a/src/scss/_work-page.scss
+++ b/src/scss/_work-page.scss
@@ -44,11 +44,33 @@
     
   }
   .work-gallery{
-    img,video{
-      object-fit: cover;
-      height: 100%;
-      width: 100%;
-      max-width: 20rem;
+    margin: 0 auto;
+    .slick-slider{
+      img,video{
+        object-fit: cover;
+        width: 100%;
+        max-width: 50rem;
+        display: block;
+        margin: 0 auto;
+        border-radius: 0.5rem;
+      }
+      .slick-slide{
+        transform: scale(0.8);
+      }
+      .slick-center{
+        transform: scale(1);
+      }
+      .slick-arrow{
+        display: none !important;
+      }
+
+      .slick-dots li button:before{
+        font-size: 10px;
+      }
+      .slick-dots li.slick-active button:before{
+        color: #ff8400;
+        opacity: 0.8;
+      }
     }
   }
 }
@@ -57,6 +79,25 @@
   .single-work-main{
     .single-page-landing{
       margin: 3rem 0 5rem;
+    }
+    .work-gallery{
+      max-width: 55rem;  
+      .slick-slider{
+        img,video{
+          max-width: 50rem;
+        }
+        .slick-arrow{
+          display: block !important;
+        }
+        .slick-next:before{
+          color: #ff8400;
+          font-size: 23px;
+        }
+        .slick-prev:before{
+          color: #ff8400;
+          font-size: 23px;
+        }
+      }
     }
   }
 }
