--- a/src/scss/_home-work-section.scss
+++ b/src/scss/_home-work-section.scss
@@ -23,43 +23,49 @@
     font-weight: 600;
     font-size: 1.5rem;
   }
-  .home-page-single-work{
-    h3{
-      font-weight: 500;
-      font-size: 1.3rem;
-      margin-bottom: 0.5rem;
-    }
-    .top-skills{
-      display: flex;
-      font-size: 1rem;
-      gap: 0.5rem;
-      p:last-child{
-        border: none;
+  article{
+    background-color: rgb(247, 247, 241);
+    border-radius: 1rem;
+    padding: 1rem;
+    margin-bottom: 2rem;
+    .home-page-single-work{
+      h3{
+        font-weight: 500;
+        font-size: 1.3rem;
+        margin-bottom: 0.5rem;
       }
-    
-      p{
-        margin: 0;
-        position: relative;
-        padding-right:0.5rem ;
-        border-right: 0.1rem solid black;
+      .top-skills{
+        display: flex;
+        font-size: 1rem;
+        gap: 0.5rem;
+        p:last-child{
+          border: none;
+        }
+      
+        p{
+          margin: 0;
+          position: relative;
+          padding-right:0.5rem ;
+          border-right: 0.1rem solid black;
+        }
       }
-    }
-
-    .learn-more-button{
-      max-width: 13rem;
-      border: 0.15rem solid #f08a4b;
-      border-radius: 3rem;
-      padding: 0.3rem 0.5rem;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      gap: 1rem;
-      margin-bottom: 2rem;
-      p{
-        margin: 0;
-      }
-      svg{
-        width: 2rem;
+  
+      .learn-more-button{
+        max-width: 13rem;
+        border: 0.15rem solid #f08a4b;
+        border-radius: 3rem;
+        padding: 0.3rem 0.5rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 1rem;
+        margin-bottom: 2rem;
+        p{
+          margin: 0;
+        }
+        svg{
+          width: 2rem;
+        }
       }
     }
   }
@@ -75,7 +81,8 @@
       font-size: 2.8rem;
     }
     article{
-      margin-bottom: 15rem;
+      padding: 2rem;
+      margin-bottom: 10rem;
       display: grid;
       grid-template-columns: 3fr 2fr;
       grid-template-rows: auto;
