--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,546 +1,17 @@
-body {
-  line-height: 1.5;
-  max-width: 2000px;
-  margin: 0;
-  background-color: #EEEEEA;
-  font-family: "Raleway";
-}
-body .home-page {
-  background-color: #EEEEEA;
-}
-body a {
-  text-decoration: none;
-  color: black;
-}
-body a:visited {
-  color: black;
-}
+/* Error: Can't find stylesheet to import.
+ *   ,
+ * 1 | @use 'loading';
+ *   | ^^^^^^^^^^^^^^
+ *   '
+ *   scss/styles.scss 1:1  root stylesheet */
 
-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  position: relative;
-}
-header .logo {
-  width: 4rem;
-  height: 4rem;
-}
-header button {
-  position: absolute;
-  top: 1.4rem;
-  right: 1rem;
-  z-index: 10;
-  border: 0.1rem solid #ff8400;
-  border-radius: 1rem;
-  padding: 0.3rem 1.3rem;
-  background-color: transparent;
-}
-header button svg {
-  height: 1rem;
-}
-header .nav-and-button-wrapper .general-nav {
-  position: absolute;
-  top: 0;
-  right: 0;
-  background-color: white;
-}
-header .nav-and-button-wrapper .general-nav ul {
-  list-style: none;
-  padding-left: 0;
-  margin-bottom: 0;
-}
-header .nav-and-button-wrapper .general-nav ul li {
-  text-align: center;
-  position: relative;
-}
-header .nav-and-button-wrapper .general-nav ul li a {
-  text-decoration: none;
-}
-header .nav-and-button-wrapper .general-nav ul li a::after {
-  content: "";
-  position: absolute;
-  left: 25%;
-  bottom: 0;
-  width: 50%;
-  height: 2px;
-  background-color: #f08a4b;
-  transform: scaleX(0);
-  transition: transform 0.3s ease;
-  transform-origin: left;
-}
-header .nav-and-button-wrapper .general-nav ul li a:hover::after {
-  transform: scaleX(1);
-}
-header .nav-and-button-wrapper .mobile-nav {
-  border-bottom-left-radius: 2rem;
-  border-top-left-radius: 2rem;
-  padding: 0 1.2rem;
-}
-header .nav-and-button-wrapper .mobile-nav ul {
-  margin-top: 1.8rem;
-}
-header .nav-and-button-wrapper .mobile-nav ul li {
-  margin-bottom: 2rem;
-}
-header .nav-and-button-wrapper .mobile-nav .social-links-wrapper {
-  border: 1px solid #ff8400;
-  margin-top: 4.5rem;
-  padding: 1rem;
-  border-radius: 1rem;
-}
-header .nav-and-button-wrapper .mobile-nav .social-links-wrapper p {
-  margin: 0 0 1rem;
-  text-align: center;
-}
-header .nav-and-button-wrapper .mobile-nav .social-links-wrapper .social-links {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 5rem;
-}
-header .nav-and-button-wrapper .desktop-nav {
-  top: 1.4rem;
-  right: 1rem;
-  border-radius: 1rem;
-}
-header .nav-and-button-wrapper .desktop-nav .header-nav {
-  height: 50vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-header .nav-and-button-wrapper .desktop-nav .header-nav ul {
-  width: 100%;
-}
-header .nav-and-button-wrapper .desktop-nav .header-nav ul li {
-  font-size: 1.3rem;
-  width: 100%;
-  margin: 4rem 0;
-}
-header .nav-and-button-wrapper .desktop-nav .header-nav ul li a::after {
-  left: 0;
-  width: 100%;
-  height: 2px;
-  background-color: #f08a4b;
-  transform: scaleX(0);
-  transition: transform 0.3s ease;
-  transform-origin: left;
-}
-header .nav-and-button-wrapper .desktop-nav .header-nav ul li a:hover::after {
-  transform: scaleX(1);
-}
-
-@media (min-width: 56em) {
-  header button {
-    font-size: 1.2rem;
-    font-family: "Gowun Batang";
-  }
-}
-.landing-section {
-  height: 100vh;
-  margin: 0 auto;
-  text-align: center;
-}
-.landing-section .name-wrapper {
-  margin-top: 5rem;
-}
-.landing-section .name-wrapper h1 {
-  font-family: "Gowun Batang";
-  font-weight: 200;
-  font-size: 3rem;
-  color: black;
-  margin: 0;
-}
-.landing-section .name-wrapper h2 {
-  font-family: "Raleway";
-  font-weight: 400;
-  font-size: 1.8rem;
-}
-.landing-section .name-wrapper p {
-  font-family: "Raleway";
-  font-weight: 300;
-  font-size: 1.5rem;
-  font-style: italic;
-}
-.landing-section svg {
-  margin-top: 4rem;
-}
-
-@media (min-width: 56em) {
-  .landing-section .name-wrapper h1 {
-    font-size: 4.5rem;
-  }
-  .landing-section .name-wrapper h2 {
-    font-size: 2rem;
-  }
-}
-.home-work-section .work-short-overview {
-  border-left: 0.15rem solid #f08a4b;
-  padding-left: 0.5rem;
-}
-.home-work-section img {
-  object-fit: cover;
-  width: 100%;
-  height: 100%;
-  position: relative;
-  margin: 0 auto;
-  filter: grayscale(70%) opacity(100%) saturate(120%) sepia(0%);
-  transition: all 150ms;
-}
-.home-work-section img:hover {
-  filter: none;
-}
-.home-work-section h2 {
-  font-weight: 600;
-  font-size: 1.5rem;
-}
-.home-work-section .home-page-single-work h3 {
-  font-weight: 500;
-  font-size: 1.3rem;
-  margin-bottom: 0.5rem;
-}
-.home-work-section .home-page-single-work .top-skills {
-  display: flex;
-  font-size: 1rem;
-  gap: 0.5rem;
-}
-.home-work-section .home-page-single-work .top-skills p:last-child {
-  border: none;
-}
-.home-work-section .home-page-single-work .top-skills p {
-  margin: 0;
-  position: relative;
-  padding-right: 0.5rem;
-  border-right: 0.1rem solid black;
-}
-.home-work-section .home-page-single-work .learn-more-button {
-  max-width: 13rem;
-  border: 0.15rem solid #f08a4b;
-  border-radius: 3rem;
-  padding: 0.3rem 0.5rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 1rem;
-  margin-bottom: 2rem;
-}
-.home-work-section .home-page-single-work .learn-more-button p {
-  margin: 0;
-}
-.home-work-section .home-page-single-work .learn-more-button svg {
-  width: 2rem;
-}
-
-@media (min-width: 56em) {
-  .home-work-section {
-    margin: 0 2rem;
-  }
-  .home-work-section .work-short-overview {
-    font-size: 1.2rem;
-  }
-  .home-work-section h2 {
-    font-size: 2.8rem;
-  }
-  .home-work-section article {
-    margin-bottom: 15rem;
-    display: grid;
-    grid-template-columns: 3fr 2fr;
-    grid-template-rows: auto;
-    column-gap: 4rem;
-  }
-  .home-work-section article .image-container {
-    grid-column: 1/2;
-    grid-row: 1/2;
-  }
-  .home-work-section article .home-page-single-work {
-    grid-column: 2/3;
-  }
-  .home-work-section article .home-page-single-work h3 {
-    font-size: 1.8rem;
-  }
-  .home-work-section article .home-page-single-work .top-skills {
-    font-size: 1.3rem;
-    gap: 1rem;
-  }
-  .home-work-section article .home-page-single-work .top-skills p {
-    padding-right: 1rem;
-  }
-  .home-work-section article:nth-child(2), .home-work-section article:nth-child(4) {
-    grid-template-columns: 2fr 3fr;
-  }
-  .home-work-section article:nth-child(2) .home-page-single-work, .home-work-section article:nth-child(4) .home-page-single-work {
-    grid-column: 1/2;
-  }
-  .home-work-section article:nth-child(2) .image-container, .home-work-section article:nth-child(4) .image-container {
-    grid-column: 2/3;
-  }
-}
-.about-me-section .about-me-text p {
-  max-width: 40rem;
-}
-.about-me-section .about-me-text .react-tabs ul {
-  border: none;
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-  gap: 1rem;
-}
-.about-me-section .about-me-text .react-tabs ul li {
-  background-color: inherit;
-  border: none;
-  border-bottom: 2px solid black;
-  font-weight: 600;
-  padding: 0.8rem 1rem;
-}
-.about-me-section .about-me-text .react-tabs ul li:focus {
-  border-color: #ff8400;
-}
-.about-me-section .about-me-text .react-tabs ul li:focus::after {
-  background: none;
-}
-.about-me-section .about-me-text .react-tabs ul .react-tabs__tab--selected {
-  border-color: rgb(255, 132, 0);
-  background: none;
-}
-.about-me-section .about-me-text .skill-tab-panel {
-  width: 100%;
-  max-width: 100vw;
-}
-.about-me-section .about-me-text .skill-tab-panel .single-skill {
-  display: flex;
-  align-items: center;
-  gap: 1rem;
-}
-.about-me-section .about-me-text .skill-tab-panel .single-skill img {
-  width: 4rem;
-  height: 4rem;
-}
-
-@media (min-width: 56em) {
-  .about-me-section .about-me-text p {
-    max-width: 60rem;
-  }
-}
-footer .footer-desktop {
-  display: none;
-}
-
-@keyframes bounce {
-  0%, 100% {
-    transform: translateY(0);
-  }
-  50% {
-    transform: translateY(-30px);
-  }
-}
-@media (min-width: 56em) {
-  footer .footer-desktop {
-    display: block;
-    position: fixed;
-    bottom: 1rem;
-    right: 1.5rem;
-    z-index: 20;
-  }
-  footer .footer-desktop .footer-icons {
-    display: flex;
-    flex-direction: column;
-    gap: 2rem;
-  }
-  footer .footer-desktop .footer-icons svg {
-    width: 1.8rem;
-    height: 1.8rem;
-    transition: transform 0.3s ease-in-out;
-  }
-  footer .footer-desktop .footer-icons svg:hover {
-    animation: bounce 0.8s ease-in-out forwards;
-  }
-  footer .footer-desktop .footer-icons svg:focus {
-    animation: none;
-  }
-}
-.home-page {
-  margin: 0 1rem;
-}
-
-.detailed-section h3 {
-  text-align: center;
-  margin-bottom: 0;
-  font-weight: 600;
-}
-.detailed-section .overview {
-  margin-bottom: 6rem;
-}
-.detailed-section .overview h2 {
-  text-align: center;
-}
-.detailed-section .work-tools {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  gap: 2rem;
-  row-gap: 0;
-  margin-bottom: 2rem;
-}
-.detailed-section .work-tools p {
-  border: 1px solid #ff8400;
-  border-radius: 2rem;
-  padding: 0.4rem 0.6rem;
-}
-.detailed-section .work-info .react-tabs ul {
-  border: none;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 3rem;
-}
-.detailed-section .work-info .react-tabs ul li {
-  background-color: inherit;
-  border: none;
-  border-bottom: 2px solid black;
-  font-weight: 600;
-  padding: 0.8rem 2rem;
-}
-.detailed-section .work-info .react-tabs ul li:focus {
-  border-color: #ff8400;
-}
-.detailed-section .work-info .react-tabs ul li:focus::after {
-  background: none;
-}
-.detailed-section .work-info .react-tabs ul .react-tabs__tab--selected {
-  border-color: rgb(255, 132, 0);
-  background: none;
-}
-.detailed-section .work-info .tab-panel-wrapper {
-  max-width: 35rem;
-  margin: 0 auto;
-}
-.detailed-section .work-info .tab-panel-wrapper h4 {
-  margin-bottom: 0.5rem;
-}
-.detailed-section .work-info .tab-panel-wrapper p {
-  margin-top: 0;
-  margin-bottom: 1.7rem;
-}
-
-@media (min-width: 56em) {
-  .detailed-section {
-    margin-top: 12rem;
-  }
-  .detailed-section h3 {
-    font-size: 1.5rem;
-  }
-  .detailed-section p {
-    font-size: 1.2rem;
-  }
-  .detailed-section .overview {
-    margin: 0 auto 8rem;
-    max-width: 55rem;
-  }
-  .detailed-section .work-tools p {
-    padding: 0.5rem 1.5rem;
-  }
-  .detailed-section .work-info .react-tabs ul li {
-    font-size: 1.2rem;
-  }
-  .detailed-section .work-info .tab-panel-wrapper {
-    max-width: 55rem;
-  }
-}
-.single-work-main {
-  margin: 0 1rem;
-}
-.single-work-main .single-page-landing {
-  margin: 5rem 0 10rem;
-  max-height: 100vh;
-}
-.single-work-main .single-page-landing h1 {
-  text-align: center;
-  font-size: 2rem;
-  font-weight: 500;
-}
-.single-work-main .single-page-landing .featured-image {
+body::before {
+  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
+      "Droid Sans Mono", monospace, monospace;
+  white-space: pre;
   display: block;
-  margin: 0 auto 1rem;
-  max-width: 50rem;
-  object-fit: cover;
-  height: 100%;
-  width: 100%;
+  padding: 1em;
+  margin-bottom: 1em;
+  border-bottom: 2px solid black;
+  content: "Error: Can't find stylesheet to import.\a   \2577 \a 1 \2502  @use 'loading';\a   \2502  ^^^^^^^^^^^^^^\a   \2575 \a   scss/styles.scss 1:1  root stylesheet";
 }
-.single-work-main .single-page-landing .single-page-buttons {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 2rem;
-}
-.single-work-main .single-page-landing .single-page-buttons a {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 0.3rem;
-  width: 8rem;
-  padding: 0.3rem 0.6rem;
-  border: 0.1rem solid #ff8400;
-  border-radius: 1.5rem;
-}
-.single-work-main .single-page-landing .single-page-buttons a p {
-  font-weight: 500;
-  margin: 0;
-}
-.single-work-main .single-page-landing .single-page-buttons a svg {
-  width: 1.5rem;
-  height: 1.5rem;
-}
-.single-work-main .work-gallery {
-  margin: 0 auto;
-}
-.single-work-main .work-gallery .slick-slider img, .single-work-main .work-gallery .slick-slider video {
-  object-fit: cover;
-  width: 100%;
-  max-width: 50rem;
-  display: block;
-  margin: 0 auto;
-  border-radius: 0.5rem;
-}
-.single-work-main .work-gallery .slick-slider .slick-slide {
-  transform: scale(0.8);
-}
-.single-work-main .work-gallery .slick-slider .slick-center {
-  transform: scale(1);
-}
-.single-work-main .work-gallery .slick-slider .slick-arrow {
-  display: none !important;
-}
-.single-work-main .work-gallery .slick-slider .slick-dots li button:before {
-  font-size: 10px;
-}
-.single-work-main .work-gallery .slick-slider .slick-dots li.slick-active button:before {
-  color: #ff8400;
-  opacity: 0.8;
-}
-
-@media (min-width: 56em) {
-  .single-work-main .single-page-landing {
-    margin: 3rem 0 5rem;
-  }
-  .single-work-main .work-gallery {
-    max-width: 55rem;
-  }
-  .single-work-main .work-gallery .slick-slider img, .single-work-main .work-gallery .slick-slider video {
-    max-width: 50rem;
-  }
-  .single-work-main .work-gallery .slick-slider .slick-arrow {
-    display: block !important;
-  }
-  .single-work-main .work-gallery .slick-slider .slick-next:before {
-    color: #ff8400;
-    font-size: 23px;
-  }
-  .single-work-main .work-gallery .slick-slider .slick-prev:before {
-    color: #ff8400;
-    font-size: 23px;
-  }
-}
-
-/*# sourceMappingURL=styles.css.map */
