--- a/src/scss/_about-section.scss
+++ b/src/scss/_about-section.scss
@@ -1,3 +1,12 @@
+@keyframes slideIn{
+  0%{
+    transform: translateX(-100%);
+  }
+  100%{
+    transform: translateX(0);
+  }
+}
+
 .about-me-section{
   .about-me-text{
     p{
@@ -48,9 +57,15 @@
 
 @media(min-width:56em){
   .about-me-section{
+    margin: 0 2rem;
     .about-me-text{
-      p{
-        max-width: 60rem;
+      .about-text{
+        p{
+          max-width: 60rem;
+        }
+      }
+      .about-visible{
+        animation: slideIn ease-in 0.6s;
       }
     }
   }
