made the under-construction page

--- a/src/scss/_work-page.scss
+++ b/src/scss/_work-page.scss
@@ -1,6 +1,14 @@
 @use 'work-page-more-detail';
 .single-work-main{
   margin: 0 1rem;
+  .under-construction{
+    font-size: 2rem;
+    margin: 0 auto;
+    height: 80vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
   .single-page-landing{
     margin: 5rem 0 10rem;
     max-height: 100vh;
