--- a/src/scss/_work-page.scss
+++ b/src/scss/_work-page.scss
@@ -52,7 +52,7 @@
     
   }
   .work-gallery{
-    margin: 0 auto;
+    margin: 0 auto 3rem;
     .slick-slider{
       img,video{
         object-fit: cover;
