--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -319,6 +319,14 @@ header .nav-and-button-wrapper .desktop-nav .header-nav ul li a:hover::after {
     transform: translateX(0);
   }
 }
+@keyframes slideInFromRight {
+  0% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
 .about-me-section .about-me-text p {
   max-width: 40rem;
   text-align: justify;
@@ -360,16 +368,33 @@ header .nav-and-button-wrapper .desktop-nav .header-nav ul li a:hover::after {
   width: 4rem;
   height: 4rem;
 }
+.about-me-section .about-me-text .about-visible {
+  animation: slideIn ease-in 0.8s;
+}
+.about-me-section .about-me-text .skill-visible {
+  animation: slideInFromRight ease-in 0.8s;
+}
 
 @media (min-width: 56em) {
   .about-me-section {
-    margin: 0 2rem;
+    margin: 0 2rem 4rem;
+  }
+  .about-me-section h2 {
+    font-size: 2.8rem;
+    font-weight: 600;
+  }
+  .about-me-section .about-me-text {
+    display: grid;
+    grid-template-columns: minmax(20rem, 40rem) minmax(30rem, 40rem);
+    gap: 2.5rem;
+  }
+  .about-me-section .about-me-text h3 {
+    font-size: 1.8rem;
+    font-weight: 500;
   }
   .about-me-section .about-me-text .about-text p {
+    font-size: 1.2rem;
     max-width: 60rem;
-  }
-  .about-me-section .about-me-text .about-visible {
-    animation: slideIn ease-in 0.6s;
   }
 }
 footer .footer-desktop {
@@ -551,7 +576,7 @@ footer .footer-desktop {
   height: 1.5rem;
 }
 .single-work-main .work-gallery {
-  margin: 0 auto;
+  margin: 0 auto 3rem;
 }
 .single-work-main .work-gallery .slick-slider img, .single-work-main .work-gallery .slick-slider video {
   object-fit: cover;
