--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,3 +1,37 @@
+/* ----------accessibility------------ */
+.screen-reader-text {
+  border: 0;
+  clip: rect(1px, 1px, 1px, 1px);
+  clip-path: inset(50%);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute !important;
+  width: 1px;
+  word-wrap: normal !important;
+}
+
+.screen-reader-text:focus {
+  background-color: #f1f1f1;
+  border-radius: 3px;
+  box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.6);
+  clip: auto !important;
+  clip-path: none;
+  color: #21759b;
+  display: block;
+  font-size: 0.875rem;
+  font-weight: 700;
+  height: auto;
+  left: 5px;
+  line-height: normal;
+  padding: 15px 23px 14px;
+  text-decoration: none;
+  top: 5px;
+  width: auto;
+  z-index: 100000;
+}
+
 @keyframes fadeIn {
   0% {
     opacity: 0;
@@ -374,18 +408,16 @@ header .nav-and-button-wrapper .desktop-nav .header-nav ul li a:hover::after {
   height: 4rem;
 }
 .about-me-section .about-me-text .about-visible {
-  animation: slideIn ease-in 0.8s;
+  animation: slideIn ease-in 0.8s forwards;
   animation-delay: 0.2s;
   opacity: 1;
-  transform: translateX(0);
-  transition: opacity 0.5s ease, transform 0.5s ease;
+  will-change: opacity, transform;
 }
 .about-me-section .about-me-text .skill-visible {
-  animation: slideInFromRight ease-in 0.8s;
+  animation: slideInFromRight ease-in 0.8s forwards;
   animation-delay: 0.2s;
   opacity: 1;
-  transform: translateX(0);
-  transition: opacity 0.5s ease, transform 0.5s ease;
+  will-change: opacity, transform;
 }
 
 @media (min-width: 56em) {
